<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/clContainer"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login_edited"
    tools:context=".View.MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Welcome"
        android:textColor="@color/quantum_bluegrey950"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="24dp" />
        <TextView
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            android:textColor="@color/quantum_bluegrey950"
            android:textStyle="bold"
            android:id="@+id/tvLoginMessage"
            android:text="Login and start searching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cvCredentials"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginRight="12dp"
            app:cardCornerRadius="16dp"
            android:elevation="12dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="12dp">
                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_person_outline_black_24dp"
                    android:tint="@color/quantum_bluegrey600"
                    app:layout_constraintBottom_toBottomOf="@+id/etUserLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/etUserLogin" />
                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_lock_outline_black_24dp"
                    android:tint="@color/quantum_bluegrey600"
                    app:layout_constraintBottom_toBottomOf="@+id/etPasswordLogin"
                    app:layout_constraintStart_toStartOf="@+id/ivUser"
                    app:layout_constraintTop_toTopOf="@+id/etPasswordLogin" />
                <EditText
                    android:id="@+id/etUserLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:hint="Username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivUser"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginBottom="8dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivUser"
                    app:layout_constraintTop_toBottomOf="@+id/etUser" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:textSize="20sp"
            android:paddingBottom="2dp"
            android:id="@+id/btLogin"
            android:paddingTop="2dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/bg_btn_bluegrey"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/cvCredentials"
            app:layout_constraintLeft_toLeftOf="@id/cvCredentials"
            app:layout_constraintTop_toBottomOf="@id/cvCredentials"
            android:textAllCaps="false"
            android:text="Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
            <TextView
                android:textSize="15sp"
                android:paddingBottom="2dp"
                android:id="@+id/txtLogin"
                android:paddingTop="2dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/btLogin"
                app:layout_constraintLeft_toLeftOf="@id/btLogin"
                app:layout_constraintTop_toBottomOf="@id/btLogin"
                android:textAllCaps="false"
                android:text="Don't you have an account?"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
            <TextView
                android:textSize="15sp"
                android:paddingBottom="2dp"
                android:id="@+id/txtSignIn"
                android:paddingTop="2dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/txtLogin"
                app:layout_constraintLeft_toLeftOf="@id/txtLogin"
                app:layout_constraintTop_toBottomOf="@id/txtLogin"
                android:textAllCaps="false"
                android:text="Register Here!"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
    </androidx.constraintlayout.widget.ConstraintLayout>
