...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/search_places"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/circlebckpink"
                                android:clickable="true"
                                android:padding="10dp"
                                android:src="@drawable/ic_search_black_24dp" />
...
